[tool.poetry]
name = "shanyrak"
version = "0.1.0"
description = ""
authors = ["dimalbek <dimalbek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
uvicorn = "^0.29.0"
pydantic = "^2.7.0"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
